# conceptbase-cc

./: .dockerignore  .gitignore  .gitignore.tmp  CONTRIBUTING.md  LICENSE  README.md  deliverable-nodes.md  flake.nix  test.nix
.cursor/rules/: class-named-methods.mdc  component-nix-naming.mdc  no-ant.mdc
AdminPOOL/: CB-developer-config.txt  CB-developer-config.txt~  Makefile  backport-conceptbase+-files-20240826.txt  cb-linuxmint-2021.txt
AdminPOOL/CHECKINS/: cbase-AllTickets.html  cbase-Ticket2.html  cbaseTicket10.html  cbaseTicket3.html  cbaseTicket4.html  cbaseTicket5.html  cbaseTicket6.html  cbaseTicket7.html  cbaseTicket8.html  cbaseTicket9.html
AdminPOOL/CVS/: Entries  Repository
AdminPOOL/ConceptBase_HOW-TO/: !!! COPYRIGHT NOTICE !!!.txt  ticket296.cbs.txt
AdminPOOL/crontabs/: autotest.bat  clean.bat  cron.weekly.export~  cron.weekly.test  cron.weekly.test.mail  daily.bat
AdminPOOL/distrib/: Makefile  cb-request.awk  mail.txt  make_programmer_package  sendKey  tar-exclude
AdminPOOL/doc/: CB_Pool.htm  Makefile
AdminPOOL/utils/: CB_AnalyzerDiff  CB_CopyOldFiles  CB_Makedepend  make.i86pc  make.linux  make.linux64  make.linuxarm  make.mac  make.sun4
AdminPOOL/web/: Makefile
ProductPOOL/: CB-FreeBSD-License.txt  CB-FreeBSD-License.txt~  CBTEAM.txt  Makefile  Makefile~  README.txt  README.txt~  cbgraph  cbgraph.bat  cbgraph.bat~  cbgraph~  cbiva  cbiva.bat  cbiva.bat~  cbiva~  cbserver  cbserver~  cbshell.bat~  config.mk  config.mk.1  config.mk~  make-executable~  rules.mk  rules.mk~  startCBiva.bat  startCBiva.sh  updateCB-bin
ProductPOOL/CVS/: Entries  Repository
ProductPOOL/EXPORT/: CB-FreeBSD-License.txt  README.txt  cbgraph  cbgraph.bat  cbiva  cbiva.bat  cbserver  cbserver.bat  make-executable
ProductPOOL/clientSources/: Makefile
ProductPOOL/java/: .project  CBinstaller-manifest.txt  Makefile  manifest.txt
ProductPOOL/lib/: .#SYSTEM.SWI.rule.14.56  .#SYSTEM.SWI.rule.14.58  .#SYSTEM.SWI.rule.14.59  .#SYSTEM.SWI.symbol.14.56  .#SYSTEM.SWI.symbol.14.58  .#SYSTEM.SWI.telos.14.55  .#SYSTEM.SWI.telos.14.57  .#SYSTEM.symbol.14.37  .#SYSTEM.symbol.14.57  ATKshapes.sml  AssertionModel.sml  AssertionsForClasses.sml  CB_Create_SYSTEM  CB_Create_SYSTEM~  CompleteBDMRuleConstraintModel.sml  ConstraintModel.sml  (+36 more)
components/libcbc/: CMakeLists.txt
components/libcbc/cmake/: libcbcConfig.cmake.in
components/libcbc/src/: CBinterface.c
components/libcbc/tests/: testterm.c
components/libcbcos/: CMakeLists.txt
components/libcbcos/src/: Literals.cc  QUERY.h  SYMID.h  SYMIDREFHashSet.h  SYMIDSTLSET.h  SYMTBL.cc  SYMTBL.h  StatisticHashSet.h  TDB.cc  TDB.h  TDB_testall.cc  TIMELINE.h  TIMEPOINT.h  TOBJ.cc  TOBJ.h  TOID.h  TOIDREFHashSet.h  TOIDSETSTL.cc  TOIDSETSTL.h  Version.h  _IO_config.h  bim2c.c  longSETSTL.h  trans.cc
components/libcbcview/: CMakeLists.txt
components/libcbcview/src/: CBclient.cc  CBclient.h
components/libcbgeneral/: CMakeLists.txt
components/libcbgeneral/cmake/: libcbgeneralConfig.cmake.in
components/libcbgeneral/include/conceptbase/: prolog.h  unixToProlog.h
components/libcbgeneral/src/: BimIpc.c  FileIO.c  StringBuffer.c  TermCache.cc  UnixFileSys.c  swiGeneral.c  unixToProlog.c
components/libcbipc/: CMakeLists.txt
components/libcbipc/src/: IpcParser.h  IpcParser.l  IpcParser.y  IpcString.c  IpcString.h
components/libcbtelos/: CMakeLists.txt
components/libcbtelos/cmake/: libcbtelosConfig.cmake.in
components/libcbtelos/src/: te_callparser.c  te_parser.l  te_smlutil.c
components/libcbtelosclient/: CMakeLists.txt
components/libcbtelosclient/src/: te_access.c  te_parser.l  te_parser.y  te_smlutil.c
components/libcbtelosclient/tests/: te_test_access.c
components/libcbtelosserver/: CMakeLists.txt
components/libcbtelosserver/src/: te_smlCToProlog.c  te_smlCToProlog.h  te_smlGetFragmentSpace.c
components/tree-sitter-conceptbase/: .gitignore  CMakeLists.txt  README.md
components/tree-sitter-conceptbase/cmake/: tree-sitter-conceptbase.pc.in
components/tree-sitter-conceptbase/docs/: SPECIFICATION.md
components/tree-sitter-conceptbase/scripts/: build.sh  generate-doc-corpus.py  run-c-test.sh  test-all.sh  test-encoding.sh  test-frames.sh
components/tree-sitter-conceptbase/source/: conceptbase_parser.c  conceptbase_parser.h  conceptbase_parser.hpp  grammar.js  package.json  tree-sitter-conceptbase.h  tree-sitter.json
components/tree-sitter-conceptbase/source/queries/: highlights.scm
components/tree-sitter-conceptbase/source/test/corpus/: assertions.txt  documentation-assertions.txt  documentation-frames.txt  documentation-parse-failures.txt  documentation-snippets.txt  ecarules.txt  encoding.txt  telos.txt
components/tree-sitter-conceptbase/tests/: test_parse.c
components/tree-sitter-conceptbase/tests/samples/: unicode-be.cb  unicode-le.cb  unicode.cb
conceptbase/: cbgraph.desktop  cbserver.bat
docs/: archive-migration.md  derivation-deps.puml  dev-swi-lsp.md  rebuild-task-graph.md
nix/: buildcbutils.nix  cb-graph.nix  cb-shell.nix  cb-testclient.nix  cb-web.nix  cb-workbench.nix  cbserver.nix  conceptbase.nix  doc-common.nix  doc-developer.nix  doc-external-licenses.nix  doc-logos.nix  doc-prog-manual.nix  doc-static.nix  doc-tech-info.nix  doc-tutorial.nix  doc-user-manual.nix  docs.nix  examples-corpus.nix  grammar-compiler.nix  grappa.nix  integration-tests.nix  java-app.nix  java-deps.nix  java-legacy-maven-lock.nix  java-maven-local-repo.nix  java-maven-lock.nix  java-reactor-src.nix  java.nix  jgl.nix  legacy-maven-src.nix  libcbc.nix  libcbcos.nix  libcbcview.nix  libcbgeneral.nix  libcbipc.nix  libcbtelos.nix  libcbtelosclient.nix  libcbtelosserver.nix  man-pages.nix  (+9 more)
scripts/: build-all-clibs.sh  convert-block-comments-to-percent.py  convert-cb-brace-comments.py  fix-migration-git.sh  generate-javacc.sh  generate_how_to_typst.py  generate_howto_nix.py  setup-swi-lsp.sh  sync-examples.sh  sync-java-sources.sh  sync-server-engine.sh  sync-static-docs.sh  sync-system-data.sh  sync-utils.sh  sync-web.sh  translate-sml-german-pass2.py  translate-sml-german.py  verify-swi-lsp.sh
(+4506 files in other folders)
